[package]
name = "laura_magnet"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.3", features = ["json", "socks"] }
tokio = { version = "1.3.70", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
regex = "1.10.4"
askama = "0.12.1"
tower = {version = "0.4.13", features = ["full"]}
tower-http = {version = "0.5.2", features = ["full"]}
async-trait = "0.1.80"
once_cell = "1.19.0"
percent-encoding = "2.3.1"